--- a/W3/W3_11.ipynb
+++ b/W3/W3_11.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "|Naam|Studentnummer|\n",
     "|-|-|\n",
-    "|Sander|1228867|\n",
+    "|Sander|secret|\n",
     "|Sem|secret|\n",
     "|Sam|secret|\n",
     "|Agaath|secret |\n",
