--- a/W5/W5_15.ipynb
+++ b/W5/W5_15.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
-    "# Assignment Netwerkanalyse"
+    "# Assignment Kennis en Data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Notebook made by\n",
     "\n",
@@ -17,8 +21,8 @@
     "|Naam|Studentnummer|\n",
     "|-|-|\n",
     "|Thomas|secret|\n",
-    "|Jim|secret|\n",
-    "|Matthijs|secret|\n",
+    "|Jim|secret |\n",
+    "|Matthijs| secret |\n",
     "|Marijn|secret|\n",
     "\n",
     "## Peerreview\n",
@@ -33,7 +37,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Toelichting\n",
     "\n",
@@ -55,16 +61,19 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "toc": true
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Assignment-Netwerkanalyse\" data-toc-modified-id=\"Assignment-Netwerkanalyse-1\">Assignment Netwerkanalyse</a></span><ul class=\"toc-item\"><li><span><a href=\"#Notebook-made-by\" data-toc-modified-id=\"Notebook-made-by-1.1\">Notebook made by</a></span></li><li><span><a href=\"#Peerreview\" data-toc-modified-id=\"Peerreview-1.2\">Peerreview</a></span></li><li><span><a href=\"#Toelichting\" data-toc-modified-id=\"Toelichting-1.3\">Toelichting</a></span></li><li><span><a href=\"#Voor-het-inleveren!\" data-toc-modified-id=\"Voor-het-inleveren!-1.4\">Voor het inleveren!</a></span></li><li><span><a href=\"#Na-het-inleveren!\" data-toc-modified-id=\"Na-het-inleveren!-1.5\">Na het inleveren!</a></span></li></ul></li><li><span><a href=\"#RDF-plus-RDFS-conversion\" data-toc-modified-id=\"RDF-plus-RDFS-conversion-2\">RDF plus RDFS conversion</a></span><ul class=\"toc-item\"><li><span><a href=\"#Vereisten\" data-toc-modified-id=\"Vereisten-2.1\">Vereisten</a></span></li><li><span><a href=\"#Grading\" data-toc-modified-id=\"Grading-2.2\">Grading</a></span></li><li><span><a href=\"#1-Hoe-verander-ik-een-networkx-digraph-met-node-attributen-in-een-RDF-database?\" data-toc-modified-id=\"1-Hoe-verander-ik-een-networkx-digraph-met-node-attributen-in-een-RDF-database?-2.3\">1 Hoe verander ik een networkx digraph met node attributen in een RDF database?</a></span><ul class=\"toc-item\"><li><span><a href=\"#1.1-De-benodigde-libraries-importeren\" data-toc-modified-id=\"1.1-De-benodigde-libraries-importeren-2.3.1\">1.1 De benodigde libraries importeren</a></span></li><li><span><a href=\"#1.2-Het-aanmaken-van-de-familie-relaties\" data-toc-modified-id=\"1.2-Het-aanmaken-van-de-familie-relaties-2.3.2\">1.2 Het aanmaken van de familie relaties</a></span></li><li><span><a href=\"#1.3-Het-networkx-netwerk-omzetten-naar-RDF\" data-toc-modified-id=\"1.3-Het-networkx-netwerk-omzetten-naar-RDF-2.3.3\">1.3 Het networkx netwerk omzetten naar RDF</a></span></li></ul></li><li><span><a href=\"#2-Maak-SPARQL-queries-voor-al-je-gedefinieerde-relaties.\" data-toc-modified-id=\"2-Maak-SPARQL-queries-voor-al-je-gedefinieerde-relaties.-2.4\">2 Maak SPARQL queries voor al je gedefinieerde relaties.</a></span></li><li><span><a href=\"#3.-Hoe-zet-ik-een-RDF-file-om-naar-een-networkx-graph?\" data-toc-modified-id=\"3.-Hoe-zet-ik-een-RDF-file-om-naar-een-networkx-graph?-2.5\">3. Hoe zet ik een RDF file om naar een networkx graph?</a></span><ul class=\"toc-item\"><li><span><a href=\"#3.1-Importeren-van-juiste-libraries\" data-toc-modified-id=\"3.1-Importeren-van-juiste-libraries-2.5.1\">3.1 Importeren van juiste libraries</a></span></li><li><span><a href=\"#3.2-Aanmaken-van-een-graaf-en-het-downloaden-van-een-RDF-bestand\" data-toc-modified-id=\"3.2-Aanmaken-van-een-graaf-en-het-downloaden-van-een-RDF-bestand-2.5.2\">3.2 Aanmaken van een graaf en het downloaden van een RDF bestand</a></span></li><li><span><a href=\"#3.3-Het-rdflib-graaf-converteren-naar-een-networkx-graaf\" data-toc-modified-id=\"3.3-Het-rdflib-graaf-converteren-naar-een-networkx-graaf-2.5.3\">3.3 Het rdflib graaf converteren naar een networkx graaf</a></span></li></ul></li><li><span><a href=\"#3.4-Netwerk-maten-bereken-op-een-networkx-graaf\" data-toc-modified-id=\"3.4-Netwerk-maten-bereken-op-een-networkx-graaf-2.6\">3.4 Netwerk maten bereken op een networkx graaf</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#RDF-plus-RDFS-conversion\" data-toc-modified-id=\"RDF-plus-RDFS-conversion-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>RDF plus RDFS conversion</a></span><ul class=\"toc-item\"><li><span><a href=\"#Vereisten\" data-toc-modified-id=\"Vereisten-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Vereisten</a></span></li><li><span><a href=\"#Grading\" data-toc-modified-id=\"Grading-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Grading</a></span></li></ul></li></ul></div>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# RDF plus RDFS conversion\n",
     "\n",
@@ -89,7 +98,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# !pip install rdflib\n",
@@ -100,14 +111,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## 1 Hoe verander ik een networkx digraph met node attributen in een RDF database?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### 1.1 De benodigde libraries importeren\n",
     "\n",
@@ -121,7 +136,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import networkx as nx\n",
@@ -132,7 +149,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### 1.2 Het aanmaken van de familie relaties\n",
     "\n",
@@ -145,7 +164,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -197,7 +218,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### 1.3 Het networkx netwerk omzetten naar RDF\n",
     "Om het networkx netwerk om te zetten naar RDF moeten alle ouder-kind relaties en alle node attributen uit het networkx netwerk in de RDF database gezet worden.\n",
@@ -213,6 +236,7 @@
    "cell_type": "code",
    "execution_count": 86,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -378,7 +402,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## 2 Maak SPARQL queries voor al je gedefinieerde relaties.\n",
     "\n",
@@ -388,7 +414,9 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -530,7 +558,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## 3. Hoe zet ik een RDF file om naar een networkx graph?\n",
     "\n",
@@ -549,7 +579,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# rdflib\n",
@@ -563,7 +595,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### 3.2 Aanmaken van een graaf en het downloaden van een RDF bestand\n",
     "Om te beginnen hebben we een rdflib graaf nodig om het RDF bestand in op te slaan, hiervoor gebruiken we de functie 'rdflib.Graph()'.\n",
@@ -573,7 +607,9 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "URLError",
@@ -620,7 +656,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### 3.3 Het rdflib graaf converteren naar een networkx graaf\n",
     "Met de functie 'rdflib_to_networkx_graph(G)' kan je een rdflib graaf converteren naar een networkx graaf. Als argument voor de functie geef je de rdflib graaf mee."
@@ -629,7 +667,9 @@
   {
    "cell_type": "code",
    "execution_count": 0,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# RDF graaf naar networkx graaf converteren\n",
@@ -638,7 +678,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## 3.4 Netwerk maten bereken op een networkx graaf\n",
     "Vervolgens kan je een aantal netwerk maten berekenen op je nieuwe networkx graaf.\n",
@@ -654,7 +696,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -702,17 +746,26 @@
   {
    "cell_type": "code",
    "execution_count": 0,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
-  "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (system-wide)",
    "language": "python",
-   "name": "python3"
+   "metadata": {
+    "cocalc": {
+     "description": "Python 3 programming language",
+     "priority": 100,
+     "url": "https://www.python.org/"
+    }
+   },
+   "name": "python3",
+   "resource_dir": "/ext/jupyter/kernels/python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -724,12 +777,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.5"
   },
   "toc": {
-   "base_numbering": 1,
    "nav_menu": {},
-   "number_sections": false,
+   "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
@@ -737,7 +789,7 @@
    "toc_cell": true,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
